add service area

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -695,7 +695,10 @@ img {
 }
 
 /* Active Modal */
-
+.active-modal{
+  opacity: 1;
+  visibility: visible;
+}
 
 /*==================== PORTFOLIO ====================*/
 
